update navigation dropdown
Signed-off-by: Mohit Singh <42519867+Mohit505Git@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         </a>
         <div class="navbar-dropdown">
           <a class="navbar-item" href="https://github.com/ntnu-arl/reaqrovio">
-            ReAqROVIO
+            DeepVL: Deep Velocity Learning
+          </a>
+          <a class="navbar-item" href="https://github.com/ntnu-arl/reaqrovio">
+            ReAqROVIO: Refractive Aquatic ROVIO
           </a>
           <a class="navbar-item" href="https://ntnu-arl.github.io/refractive-camera-model-in-vio/">
             Refractive Camera Model in VIO
@@ -57,7 +60,7 @@
             Refractive Camera Model
           </a>
           <a class="navbar-item" href="https://github.com/ntnu-arl/underwater-datasets">
-            Underwater Dataset
+            Multi-Camera Underwater Dataset
           </a>
         </div>
       </div>
