update navigation dropdown
Signed-off-by: Mohit Singh <42519867+Mohit505Git@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://github.com/ntnu-arl/reaqrovio">
+          <a class="navbar-item" href="https://ntnu-arl.github.io/deepvl-deep-velocity-learning/">
             DeepVL: Deep Velocity Learning
           </a>
           <a class="navbar-item" href="https://github.com/ntnu-arl/reaqrovio">
